<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <FrameLayout
        app:layout_constraintBottom_toTopOf="@id/container"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <TextView
            android:id="@+id/text_view"
            android:text="@string/text_view_0"
            android:textSize="80sp"
            android:textColor="@color/white"
            android:layout_gravity="bottom|end"
            android:paddingHorizontal="36dp"
            android:maxLines="1"
            android:ellipsize="start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </FrameLayout>

    <LinearLayout
        android:id="@+id/container"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="horizontal"
            android:gravity="center"
            android:paddingHorizontal="18dp"
            android:paddingVertical="6dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                style="@style/Grey.Button"
                android:onClick="onNumberClick"
                android:id="@+id/btn_clear"
                android:text="@string/ac" />

            <com.google.android.material.button.MaterialButton
                style="@style/Grey.Button"
                android:text="@string/plus_minus"
                android:layout_marginHorizontal="18dp" />

            <com.google.android.material.button.MaterialButton
                style="@style/Grey.Button"
                android:layout_marginEnd="18dp"
                android:text="@string/percent" />

            <com.google.android.material.button.MaterialButton
                style="@style/Orange.Button"
                android:id="@+id/btn_divide"
                android:onClick="onOperationClick"
                android:text="@string/divide" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:gravity="center"
            android:paddingHorizontal="18dp"
            android:paddingVertical="6dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                style="@style/Dark.Grey.Button"
                android:id="@+id/btn_7"
                android:onClick="onNumberClick"
                android:text="@string/_7" />

            <com.google.android.material.button.MaterialButton
                style="@style/Dark.Grey.Button"
                android:id="@+id/btn_8"
                android:onClick="onNumberClick"
                android:text="@string/_8"
                android:layout_marginHorizontal="18dp" />

            <com.google.android.material.button.MaterialButton
                style="@style/Dark.Grey.Button"
                android:layout_marginEnd="18dp"
                android:id="@+id/btn_9"
                android:onClick="onNumberClick"
                android:text="@string/_9" />

            <com.google.android.material.button.MaterialButton
                style="@style/Orange.Button"
                android:id="@+id/btn_multiply"
                android:onClick="onOperationClick"
                android:text="@string/x" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:gravity="center"
            android:paddingHorizontal="18dp"
            android:paddingVertical="6dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                style="@style/Dark.Grey.Button"
                android:id="@+id/btn_4"
                android:onClick="onNumberClick"
                android:text="@string/_4" />

            <com.google.android.material.button.MaterialButton
                style="@style/Dark.Grey.Button"
                android:id="@+id/btn_5"
                android:onClick="onNumberClick"
                android:text="@string/_5"
                android:layout_marginHorizontal="18dp" />

            <com.google.android.material.button.MaterialButton
                style="@style/Dark.Grey.Button"
                android:layout_marginEnd="18dp"
                android:id="@+id/btn_6"
                android:onClick="onNumberClick"
                android:text="@string/_6" />

            <com.google.android.material.button.MaterialButton
                style="@style/Orange.Button"
                android:id="@+id/btn_minus"
                android:onClick="onOperationClick"
                android:text="@string/minus" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:gravity="center"
            android:paddingHorizontal="18dp"
            android:paddingVertical="6dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_1"
                android:onClick="onNumberClick"
                style="@style/Dark.Grey.Button"
                android:text="@string/_1" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_2"
                android:onClick="onNumberClick"
                style="@style/Dark.Grey.Button"
                android:text="@string/_2"
                android:layout_marginHorizontal="18dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_3"
                android:onClick="onNumberClick"
                style="@style/Dark.Grey.Button"
                android:layout_marginEnd="18dp"
                android:text="@string/_3" />

            <com.google.android.material.button.MaterialButton
                style="@style/Orange.Button"
                android:id="@+id/btn_plus"
                android:onClick="onOperationClick"
                android:text="@string/plus" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:gravity="center"
            android:paddingHorizontal="18dp"
            android:paddingVertical="6dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_0"
                android:onClick="onNumberClick"
                style="@style/Dark.Grey.Button"
                android:text="@string/_0"
                android:textAlignment="textStart"
                android:paddingStart="32dp"
                android:paddingEnd="0dp"
                android:layout_width="178dp" />

            <com.google.android.material.button.MaterialButton
                style="@style/Dark.Grey.Button"
                android:layout_marginHorizontal="18dp"
                android:text="@string/period" />

            <com.google.android.material.button.MaterialButton
                style="@style/Orange.Button"
                android:id="@+id/btn_equal"
                android:onClick="onOperationClick"
                android:text="@string/equal_sign" />

        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>